--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,3 +48,20 @@ spring:
             scope:
             - email
             - public_profile
+          naver:
+            client-id: qENoK7Dc3HA4f91MdWR5
+            client-secret: _o5dItZWHM
+            scope:            - name
+            - email
+            client-name: Naver
+            authorization-grant-type: authorization_code # OAuth2 토큰을 JWT토큰으로 반환, 리액트에서 사용
+            redirect-uri: http://localhost:8080/login/oauth2/code/naver # 구글, 페북은 이것이 자동으로 설정되어 있음
+            # - profile_image 라는 항목도 있지만, 사용하지 않으므로 지움
+            
+        provider: 
+          naver: # 네이버는 provider가 따로 없으므로 이러한 설정을 해주어야 함
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response # 회원정보를 json으로 받는데 response라는 키값으로 네이버가 리턴해줌
+                
